--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
             <p style="font-size: 0.9rem; margin-top: 10px;">If the app doesn't open automatically, please download it below.</p>
         </div>
         
-        <a href="jig_v1.apk" download class="download-button">
-            📱 Download JIG APK
-        </a>
+        <a id="download-btn" class="download-button" href="https://bit.ly/getjigapp" target="_blank" rel="noopener noreferrer">
+    📱 Download JIG App
+</a>
         
         <div class="info">
             <h3>🎯 How It Works:</h3>
@@ -256,3 +256,4 @@
     </script>
 </body>
 </html>
+
