--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                 </div>
                 <div class="feature">
                     <strong>🎁 Win Amazing Rewards</strong><br>
-                    Hang out with your favorite creators, get custom content, and more!
+                    Hang out with your favorite creators, get exclusive access, and more!
                 </div>
             </div>
             
             <p style="margin-top: 20px; font-size: 0.9rem; color: #999;">
                 <strong>Requirements:</strong> Android 5.0+ | 
-                <strong>Size:</strong> ~243MB | 
+                <strong>Size:</strong> ~94MB | 
                 <strong>Age:</strong> 18+ for purchases
             </p>
         </div>
@@ -256,4 +256,5 @@
     </script>
 </body>
 </html>
+
 
