--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <p class="tagline">Bid for Exclusive Creator Experiences</p>
         
-        <a class="primary-button" href="/jig-links/app/" rel="noopener noreferrer">
+        <a class="primary-button" href="/jig/app/" rel="noopener noreferrer">
             🚀 Launch J!G
         </a>
         
@@ -388,4 +388,5 @@
         }
     </script>
 </body>
+
 </html>
