--- a/verify.html
+++ b/verify.html
@@ -560,7 +560,7 @@
                 <strong>📌 Important:</strong> If you claim this account, you'll need to:
                 <br>• Verify your identity (takes 2 minutes)
                 <br>• Confirm delivery of the experiences listed above
-                <br>• Provide bank details for the ₦408,000 payout
+                <br>• Provide bank details for the payout
                 <br><br>
                 If this account is NOT yours, we'll immediately suspend it and refund all affected fans.
             </div>
