Refactor logo display and update payout details

--- a/verify.html
+++ b/verify.html
@@ -34,14 +34,16 @@
         .logo {
             width: 80px;
             height: 80px;
-            background: #E84118;
-            border-radius: 50%;
-            display: inline-flex;
+            margin: 0 auto 20px;
+            display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 20px;
+        }
+
+        .logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
         
         .alert-banner {
@@ -466,9 +468,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-                    <div class="logo">
-            <img src="jig_logo.png" alt="JIG Logo">
-        </div>
+            <div class="logo">J!G</div>
             <h1>Account Verification Required</h1>
         </div>
         
@@ -562,7 +562,7 @@
                 <strong>📌 Important:</strong> If you claim this account, you'll need to:
                 <br>• Verify your identity (takes 2 minutes)
                 <br>• Confirm delivery of the experiences listed above
-                <br>• Provide bank details for the payout
+                <br>• Provide bank details for the ₦408,000 payout
                 <br><br>
                 If this account is NOT yours, we'll immediately suspend it and refund all affected fans.
             </div>
