JIG LOGO upload

--- a/verify.html
+++ b/verify.html
@@ -468,7 +468,9 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <div class="logo">J!G</div>
+            <div class="logo">
+    <img src="jig_logo.png" alt="JIG Logo">
+</div>
             <h1>Account Verification Required</h1>
         </div>
         
