Update transaction titles and bid counts

--- a/verify.html
+++ b/verify.html
@@ -502,12 +502,12 @@
             
             <!-- Recent Transactions -->
             <div class="transactions">
-                <h4>Recent Completed Experiences</h4>
+                <h4>Recently Completed Bidding Events</h4>
                 
                 <div class="transaction-item">
                     <div>
                         <div class="title">VIP Club Night Experience</div>
-                        <div class="date">Sold 3 days ago • 23 bids</div>
+                        <div class="date">Sold 3 days ago • 13 bids</div>
                     </div>
                     <div class="price">₦187,000</div>
                 </div>
@@ -515,7 +515,7 @@
                 <div class="transaction-item">
                     <div>
                         <div class="title">Private Listening Party</div>
-                        <div class="date">Sold 1 week ago • 18 bids</div>
+                        <div class="date">Sold 1 week ago • 11 bids</div>
                     </div>
                     <div class="price">₦126,000</div>
                 </div>
@@ -523,7 +523,7 @@
                 <div class="transaction-item">
                     <div>
                         <div class="title">Studio Hangout Session</div>
-                        <div class="date">Sold 2 weeks ago • 15 bids</div>
+                        <div class="date">Sold 2 weeks ago • 8 bids</div>
                     </div>
                     <div class="price">₦95,000</div>
                 </div>
