Update text to refer to bidding events instead of experiences

--- a/verify.html
+++ b/verify.html
@@ -594,7 +594,7 @@
                 <p>🎯 Your fans bid <strong>₦187,000</strong> for a club night experience</p>
                 <p>🎯 They bid <strong>₦126,000</strong> for a listening party</p>
                 <p>🎯 They bid <strong>₦95,000</strong> for a studio hangout</p>
-                <p style="margin-top: 12px; font-size: 18px; color: #FFA726;"><strong>That's ₦408,000 in 3 weeks from just 3 experiences</strong></p>
+                <p style="margin-top: 12px; font-size: 18px; color: #FFA726;"><strong>That's ₦408,000 in 3 weeks from just 3 bidding events</strong></p>
             </div>
 
             <div class="overlay-message" style="margin-top: 20px;">
