Update claim button text for account verification

--- a/verify.html
+++ b/verify.html
@@ -546,7 +546,7 @@
                 
                 <div class="action-buttons">
                     <a href="https://grandjig.github.io/jig/app/" class="btn btn-primary">
-                        ✓ YES - This is my account (Claim ₦408k)
+                        ✓ YES - This is my account (Claim Funds)
                     </a>
                     
                     <button class="btn btn-secondary" onclick="showNotMineOverlay()">
