--- a/verify.html
+++ b/verify.html
@@ -517,9 +517,9 @@
                 
             <div class="transaction-item">
     <div>
-        <div class="title">"PRE-RELEASE LISTENING PARTY (YOUR HOUSE)"</div>
+        <div class="title">"PRE-RELEASE LISTENING PARTY"</div>
         <div style="font-size: 13px; color: #aaa; margin: 8px 0; line-height: 1.4;">
-            I bring you to my place and play my unreleased album. Just you, me, and the music. Join the afterparty.
+            I bring you to my place and play my unreleased album. You, me, and the music. Join the party.
         </div>
         <div class="date">Completed 1 week ago • Winner from 11 competing bids</div>
     </div>
@@ -530,7 +530,7 @@
     <div>
         <div class="title">"STUDIO GHOST SESSION"</div>
         <div style="font-size: 13px; color: #aaa; margin: 8px 0; line-height: 1.4;">
-            Be in the room while I record my next hit. Watch the magic happen, give input on the hook, take photos.
+            Be in the room while I record my next hit. Watch the magic happen, take photos.
         </div>
         <div class="date">Completed 2 weeks ago • Winner from 8 competing bids</div>
     </div>
