--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <!-- About J!G -->
         <div class="about-section">
             <p class="about-text">
-                J!G helps creators of all kinds auction exclusive experiences to their fans and communities.
+                J!G helps creatives auction exclusive experiences to their fans and communities.
             </p>
         </div>
         
@@ -422,3 +422,4 @@
     </script>
 </body>
 </html>
+
