--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     Send the winners the arrangements of how you will deliver the experience
                 </div>
                 <div class="feature">
-                    <strong>💰 Get your earnings!</strong><br>
+                    <strong>💰 Get your funds!</strong><br>
                     The winning bid amounts will be sent directly to you!
                 </div>
             </div>
@@ -422,4 +422,5 @@
     </script>
 </body>
 </html>
+
 
