Update verification instructions in verify.html

--- a/verify.html
+++ b/verify.html
@@ -570,9 +570,9 @@
             <!-- Info Note -->
             <div class="info-note">
                 <strong>📌 Important:</strong> If you claim this account, you'll need to:
-                <br>• Verify your identity (takes 2 minutes)
-                <br>• Confirm delivery of the experiences listed above
-                <br>• Provide bank details for the ₦408,000 payout
+                <br>• Log in and verify your identity (takes 2 minutes)
+                <br>• Confirm intent to deliver the experiences listed above
+                <br>• Provide bank details for payout
                 <br><br>
                 If this account is NOT yours, we'll immediately suspend it and refund all affected fans.
             </div>
