Modify contact details in verify.html
Updated contact information for J!G Verification Team.

--- a/verify.html
+++ b/verify.html
@@ -199,7 +199,7 @@
             padding-left: 25px;
             position: relative;
         }
-        
+    
         .warning-box li:before {
             content: "⚠️";
             position: absolute;
@@ -581,7 +581,7 @@
         <!-- Contact Support -->
         <div class="contact-support">
             <p>Questions or concerns?</p>
-            <p>Contact J!G Verification Team: <a href="mailto:grandjig619@gmail.com">grandjig619@gmail.com</a></p>
+            <p>Contact J!G Verification Team HOD: <a href="mailto:grandjig619@gmail.com">grandjig619@gmail.com</a></p>
             <p style="margin-top: 10px; font-size: 12px; opacity: 0.7;">
                 Verification ID: VRF-<span id="verificationId"></span>
             </p>
